# watchtower

./: .gitignore  .ignore  .nojekyll  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  _quarto.yml  index.html  index.ipynb  index.qmd  listings.json  photos.html  photos.qmd  portfolio.html  portfolio.qmd  pyproject.toml  robots.txt  search.json  sitemap.xml
.github/workflows/: publish.yml
articles/: _metadata.yml  attention-mechanism.ipynb  index.ipynb  knowledge-distillation.ipynb  singular-value-decomposition.ipynb
assets/: index.ipynb.j2  index.qmd.j2  references.bib  resume.tex  resume.tex.j2  resume.yaml  styles.css
courses/: index.ipynb
courses/mlops/: 01-overview.ipynb  02-local-stack.ipynb  04-data-validation.ipynb  05-ml-pipeline.ipynb  08-reconciliation.ipynb  09-azure-iac.ipynb  11-observability.ipynb  12-keda-scaling.ipynb  index.ipynb
essays/: index.html  index.ipynb  index.qmd
filters/: center-images.lua
learning/: index.html  index.ipynb  index.qmd
notes/: 001-testnote.html  001-testnote.ipynb  002-optimization-stub.ipynb  003-transformers-stub.ipynb  004-cnns-stub.ipynb  _metadata.yml  hello.html  index.html  index.ipynb  index.qmd
photos/: photos.html  photos.ipynb
portfolio/: portfolio.html  portfolio.ipynb
projects/: README.md
projects/ml-platform/: Makefile  README.md  docker-compose.yml  mlops-delivery-plan.csv  mlops-proposal.csv  mlops-services-diagram.md  pyproject.toml
projects/ml-platform/docs/: mlops-delivery-plan.csv  mlops-overview.md  mlops-proposal.csv  mlops-risks.csv  mlops-services-diagram.md  proposal.md
projects/ml-platform/infra/: gpu-training.bicep  main.bicep
projects/ml-platform/src/ml_platform/: __init__.py  celeryconfig.py  idempotency.py  model_pipeline.py  producer.py  tasks.py  train.py  validate.py
writings/: index.qmd
(+26 files in other folders)
