[project]
name = "ml-platform"
version = "0.1.0"
description = "Machine learning platform on Azure — learning demo."
requires-python = ">=3.13"
dependencies = [
    "mlflow>=3.0.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "pandera>=0.23.0",
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    "boto3>=1.36.0",
    "azure-identity>=1.19.0",
    "azure-keyvault-secrets>=4.9.0",
    "azure-storage-blob>=12.24.0",
    "openai>=1.58.0",
    "python-dotenv>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
